[package]
name = "lunar"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lunar"
path = "src/lua.rs"

[dependencies]
cranelift = { version = "0.121.1", features = ["jit"], optional = true }
cranelift-native = { version = "0.121.1", optional = true }
cranelift-module = { version = "0.121.1", optional = true }
wavltree = { version = "0.0.8", optional = true }
libc = "0.2.174"
talc = "4.4.3"

[features]
default = ["jit"]
jit = ["dep:cranelift", "dep:cranelift-native", "dep:cranelift-module", "dep:wavltree"]
